# js-randomness-predictor

./: .gitattributes  .gitignore  .npmrc  CHANGELOG.md  CMakeLists.txt  CMakePresets.json.old  README.md  _config.yml  eslint.config.ts  jest.config.js  npm.build.js  package-lock.json  package.json  postbuild.cjs  postbuild.js  rollup.config.js  tsconfig.base.json  tsconfig.bin.json  tsconfig.cjs.json  tsconfig.esm.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: BROWSER_USAGE.md  HOW_DOES_IT_WORK.md  KNOWN_ISSUES.md  PublishToNPMSteps.md
_includes/: README.md  head-custom.html  head_custom.html
cdn/: js-randomness-predictor.js
configs/: tsconfig.base.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.types.json  vite.config.es.ts  vite.config.umd.ts
docs/: _config.yml  index.md
manualTesting/: firefox_seeding_changes.ts  v8_ToDouble_Changes.ts
scripts/: log_random_numbers.cjs  postbuild.cjs  random-numbers.json  testVersionsWithoutNodeTest.cjs  test_node.cjs
src/: ExecutionRuntime.ts  JSRandomnessPredictor.ts  PRNG.ts  V8XorShift128Plus.ts  XorShift128Plus.ts  callMathRandom.ts  cjs.ts  constants.ts  errors.ts  es.ts  esm.ts  index.ts  logger.ts  public_types.ts  types.ts  uint64.ts  umd.ts
tests/: Bun.test.ts  CLI.test.ts  Chrome.test.ts  Firefox.test.ts  Node.test.ts  README.md  Safari.test.ts  V8.Node.test.ts  getRandomNumbersFromDatabase.ts  getSequenceAndExpectedRandomFromRuntime.ts  queryRandomNumbersDatabase.ts  randomNumbersDatabase.json  types.ts  withRetries.ts
tsconfig/: tsconfig.base.json  tsconfig.cjs.json  (+4 more)
(+111 files in other folders)
